# BAPA

./: .gitignore  DAPA_Tasks.doc  FW.cu  README.md
CUDA_FW/: .gitignore  CMakeLists.txt  README.md  cuda_fw.cu  floyd_warshall.cpp  graphgen.cpp  run_tests.sh  test_CUDA_2D32.txt  test_CUDA_3D32.txt
CUDA_FW/headers/: block_2d.h  block_3d.h  block_3d_t2.h  dev_array.h
CUDA_FW/kernels/: block_2d.cu  block_3d.cu  block_3d_t2.cu
Floid_Warshall/: Algorithms_FW.docx
Floyd_Warshall/: Demchenko_MS.docx  Generalized_FW.docx
